[gd_scene load_steps=20 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Atom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Louis George Cafe.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/8.png" type="Texture" id=4]
[ext_resource path="res://assets/16.png" type="Texture" id=5]
[ext_resource path="res://assets/thermo.png" type="Texture" id=6]
[ext_resource path="res://assets/ohio.png" type="Texture" id=7]
[ext_resource path="res://Remapping.gd" type="Script" id=8]
[ext_resource path="res://click.wav" type="AudioStream" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1025, 2, 0, 0, 0, 0, 1025, 601, 0, 0, 0, 0, 1, 600, 0, 0, 0, 0, 0, 1 )
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.537255 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.831373, 0.831373, 0.831373, 0.592157 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 62
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 62
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 62
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 3 )

[node name="Node" type="Node"]
script = ExtResource( 1 )
atom_scene = ExtResource( 2 )

[node name="AtomTimer" type="Timer" parent="."]
autostart = true

[node name="Atoms" type="Node" parent="."]

[node name="Connections" type="Node" parent="."]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0, 1 )
rotation = 0.000975586

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -200.0
margin_right = 325.5
margin_bottom = 200.0
custom_styles/panel = SubResource( 2 )

[node name="Main" type="VBoxContainer" parent="Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 646.0
margin_bottom = 395.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Main"]
margin_right = 641.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Panel/Main/HBoxContainer"]
margin_left = 24.0
margin_right = 86.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "At"

[node name="TextureRect" type="TextureRect" parent="Panel/Main/HBoxContainer"]
margin_left = 90.0
margin_right = 152.0
margin_bottom = 71.0
rect_min_size = Vector2( 62, 62 )
rect_pivot_offset = Vector2( -629, -65 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label2" type="Label" parent="Panel/Main/HBoxContainer"]
margin_left = 156.0
margin_right = 296.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 4 )
text = "m As"

[node name="TextureRect2" type="TextureRect" parent="Panel/Main/HBoxContainer"]
margin_left = 300.0
margin_right = 362.0
margin_bottom = 71.0
rect_min_size = Vector2( 62, 62 )
rect_pivot_offset = Vector2( -629, -65 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Label3" type="Label" parent="Panel/Main/HBoxContainer"]
margin_left = 366.0
margin_right = 616.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 5 )
text = "ssembler"

[node name="Continue" type="Button" parent="Panel/Main"]
margin_top = 75.0
margin_right = 641.0
margin_bottom = 124.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Continue"

[node name="New" type="Button" parent="Panel/Main"]
margin_top = 128.0
margin_right = 641.0
margin_bottom = 177.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "New game"

[node name="Tutorial" type="Button" parent="Panel/Main"]
margin_top = 181.0
margin_right = 641.0
margin_bottom = 230.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Tutorial"

[node name="Sandbox" type="Button" parent="Panel/Main"]
margin_top = 234.0
margin_right = 641.0
margin_bottom = 283.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
text = "Sandbox"

[node name="Settings" type="Button" parent="Panel/Main"]
margin_top = 287.0
margin_right = 641.0
margin_bottom = 336.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Settings"

[node name="Credits" type="Button" parent="Panel/Main"]
margin_top = 340.0
margin_right = 641.0
margin_bottom = 390.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Credits"

[node name="Credits" type="VBoxContainer" parent="Panel"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 646.0
margin_bottom = 395.0

[node name="Label" type="Label" parent="Panel/Credits"]
margin_right = 641.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Credits"
align = 1
valign = 1

[node name="Back" type="Button" parent="Panel/Credits/Label"]
anchor_bottom = 1.0
text = "Back to main screen"

[node name="Label2" type="Label" parent="Panel/Credits"]
margin_top = 50.0
margin_right = 641.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 9 )
text = "Made by Spectral_ and MathR
for the Godot Wild Jam #53
Theme: Assembly required"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Credits"]
margin_top = 132.0
margin_right = 641.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/Credits/HBoxContainer"]
margin_left = 118.0
margin_right = 318.0
margin_bottom = 213.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Panel/Credits/HBoxContainer"]
margin_left = 322.0
margin_right = 522.0
margin_bottom = 213.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Label3" type="Label" parent="Panel/Credits"]
margin_top = 349.0
margin_right = 641.0
margin_bottom = 390.0
text = "Music was made with BeepBox
Thanks to the Godot community for making Godot Engine."
align = 1

[node name="Settings" type="VBoxContainer" parent="Panel"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 646.0
margin_bottom = 395.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/Settings"]
margin_right = 641.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Settings"
align = 1
valign = 1

[node name="Back" type="Button" parent="Panel/Settings/Label"]
anchor_bottom = 1.0
text = "Back to main screen"

[node name="Volume" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 50.0
margin_right = 641.0
margin_bottom = 80.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Volume"]
margin_top = 5.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Music volume"

[node name="HScrollBar" type="HScrollBar" parent="Panel/Settings/Volume"]
margin_left = 322.0
margin_top = 9.0
margin_right = 641.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="SEVolume" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 84.0
margin_right = 641.0
margin_bottom = 114.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/SEVolume"]
margin_top = 5.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Sound effects volume"

[node name="HScrollBar" type="HScrollBar" parent="Panel/Settings/SEVolume"]
margin_left = 322.0
margin_top = 9.0
margin_right = 641.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Flickering" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 118.0
margin_right = 641.0
margin_bottom = 149.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Flickering"]
margin_top = 6.0
margin_right = 611.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Flickering effects"

[node name="CheckBox" type="CheckBox" parent="Panel/Settings/Flickering"]
margin_left = 615.0
margin_right = 641.0
margin_bottom = 31.0
pressed = true

[node name="Left" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 153.0
margin_right = 641.0
margin_bottom = 183.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Left"]
margin_top = 5.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Turn left"

[node name="Button" type="Button" parent="Panel/Settings/Left"]
margin_left = 322.0
margin_right = 641.0
margin_bottom = 30.0
size_flags_horizontal = 3
toggle_mode = true
text = "Left key"
script = ExtResource( 8 )
action = "move_left"

[node name="Right" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 187.0
margin_right = 641.0
margin_bottom = 217.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Right"]
margin_top = 5.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Turn right"

[node name="Button" type="Button" parent="Panel/Settings/Right"]
margin_left = 322.0
margin_right = 641.0
margin_bottom = 30.0
size_flags_horizontal = 3
toggle_mode = true
text = "Left key"
script = ExtResource( 8 )
action = "move_right"

[node name="Forward" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 221.0
margin_right = 641.0
margin_bottom = 252.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Forward"]
margin_top = 6.0
margin_right = 318.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Go forward"

[node name="Button" type="Button" parent="Panel/Settings/Forward"]
margin_left = 322.0
margin_right = 641.0
margin_bottom = 31.0
size_flags_horizontal = 3
toggle_mode = true
text = "Left key"
script = ExtResource( 8 )
action = "move_up"

[node name="Backwards" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 256.0
margin_right = 641.0
margin_bottom = 286.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Backwards"]
margin_top = 5.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Go backwards"

[node name="Button" type="Button" parent="Panel/Settings/Backwards"]
margin_left = 322.0
margin_right = 641.0
margin_bottom = 30.0
size_flags_horizontal = 3
toggle_mode = true
text = "Left key"
script = ExtResource( 8 )
action = "move_down"

[node name="Attract" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 290.0
margin_right = 641.0
margin_bottom = 321.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Attract"]
margin_top = 6.0
margin_right = 318.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Attract an atom"

[node name="Button" type="Button" parent="Panel/Settings/Attract"]
margin_left = 322.0
margin_right = 641.0
margin_bottom = 31.0
size_flags_horizontal = 3
toggle_mode = true
text = "Left key"
script = ExtResource( 8 )
action = "ui_select"

[node name="Validate" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 325.0
margin_right = 641.0
margin_bottom = 355.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Validate"]
margin_top = 5.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Validate a molecule"

[node name="Button" type="Button" parent="Panel/Settings/Validate"]
margin_left = 322.0
margin_right = 641.0
margin_bottom = 30.0
size_flags_horizontal = 3
toggle_mode = true
text = "Left key"
script = ExtResource( 8 )
action = "ui_accept"

[node name="Pause" type="HBoxContainer" parent="Panel/Settings"]
margin_top = 359.0
margin_right = 641.0
margin_bottom = 390.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Settings/Pause"]
margin_top = 6.0
margin_right = 318.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Pause game"

[node name="Button" type="Button" parent="Panel/Settings/Pause"]
margin_left = 322.0
margin_right = 641.0
margin_bottom = 31.0
size_flags_horizontal = 3
toggle_mode = true
text = "Left key"
script = ExtResource( 8 )
action = "ui_cancel"

[node name="Tutorial" type="VBoxContainer" parent="Panel"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 646.0
margin_bottom = 395.0

[node name="Label" type="Label" parent="Panel/Tutorial"]
margin_right = 641.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Tutorial"
align = 1
valign = 1

[node name="Back" type="Button" parent="Panel/Tutorial/Label"]
anchor_bottom = 1.0
text = "Back to main screen"

[node name="Label2" type="Label" parent="Panel/Tutorial"]
margin_top = 56.0
margin_right = 641.0
margin_bottom = 383.0
size_flags_vertical = 6
text = "Move your player using the arrow keys (or whatever you chose in the settings)

Atoms will come from the sides of the screen. You can attract them with Space

Atoms may connect and make molecules when they collide

Your goal for each level is to assemble the molecules requested at the bottom of the screen

Once you made one of the molecules requested, press Enter while attracting it to validate it

When atoms go too fast, they become red and damage you. Temperature is the average
speed of atoms

You should also be cautious with uranium, which explodes and does damage, and... sigh...
Ohium. Instant damage. Can't do chemistry in Ohio."
align = 1

[node name="Player" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SE"

[connection signal="timeout" from="AtomTimer" to="." method="_on_AtomTimer_timeout"]
[connection signal="pressed" from="Panel/Main/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Panel/Main/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Panel/Main/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Panel/Main/Sandbox" to="." method="_on_Sandbox_pressed"]
[connection signal="pressed" from="Panel/Main/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Panel/Main/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Panel/Credits/Label/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/Settings/Label/Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="Panel/Settings/Volume/HScrollBar" to="." method="_on_Volume_value_changed"]
[connection signal="value_changed" from="Panel/Settings/SEVolume/HScrollBar" to="." method="_on_SFXVolume_value_changed"]
[connection signal="toggled" from="Panel/Settings/Flickering/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="click_pls" from="Panel/Settings/Left/Button" to="." method="_on_Button_click_pls"]
[connection signal="click_pls" from="Panel/Settings/Right/Button" to="." method="_on_Button_click_pls"]
[connection signal="click_pls" from="Panel/Settings/Forward/Button" to="." method="_on_Button_click_pls"]
[connection signal="click_pls" from="Panel/Settings/Backwards/Button" to="." method="_on_Button_click_pls"]
[connection signal="click_pls" from="Panel/Settings/Attract/Button" to="." method="_on_Button_click_pls"]
[connection signal="click_pls" from="Panel/Settings/Validate/Button" to="." method="_on_Button_click_pls"]
[connection signal="click_pls" from="Panel/Settings/Pause/Button" to="." method="_on_Button_click_pls"]
[connection signal="pressed" from="Panel/Tutorial/Label/Back" to="." method="_on_Back_pressed"]
